fix: responsive design for all pages and sliders edit: up button

--- a/index.html
+++ b/index.html
@@ -148,49 +148,62 @@
     <section class="sale30">
         <div class="inner">
             <h2>
-                Товары со скидкой <span class="sic">30%</span>
+                Товары со скидкой
+                <span class="sic">30%</span>
             </h2>
             <div class="s02-slider">
-                <div class="s02-slide">
-                    <img src="img/sale-slide-1.jpg" alt="slide01">
-                    <div class="type">сноуборд</div>
-                    <div class="item">never summer
-                        <span class="name">raven</span>
+                <div class="slide-wrapper">
+                    <div class="s02-slide">
+                        <img src="img/sale-slide-1.jpg" alt="slide01">
+                        <div class="type">сноуборд</div>
+                        <div class="item">never summer
+                            <span class="name">raven</span>
+                        </div>
                     </div>
                 </div>
-                <div class="s02-slide">
-                    <img src="img/sale-slide-2.jpg" alt="slide02">
-                    <div class="type up">крепление</div>
-                    <div class="item up">liquid force
-                        <span class="name">rant</span>
+                <div class="slide-wrapper">
+                    <div class="s02-slide">
+                        <img src="img/sale-slide-2.jpg" alt="slide02">
+                        <div class="type up">крепление</div>
+                        <div class="item up">liquid force
+                            <span class="name">rant</span>
+                        </div>
                     </div>
                 </div>
-                <div class="s02-slide">
-                    <img src="img/sale-slide-3.jpg" alt="slide03">
-                    <div class="type right">шлем</div>
-                    <div class="item right">triple eight
-                        <span class="name">hero</span>
+                <div class="slide-wrapper">
+                    <div class="s02-slide">
+                        <img src="img/sale-slide-3.jpg" alt="slide03">
+                        <div class="type right">шлем</div>
+                        <div class="item right">triple eight
+                            <span class="name">hero</span>
+                        </div>
                     </div>
                 </div>
-                <div class="s02-slide">
-                    <img src="img/sale-slide-1.jpg" alt="slide01">
-                    <div class="type">сноуборд</div>
-                    <div class="item">never summer
-                        <span class="name">raven</span>
+                <div class="slide-wrapper">
+                    <div class="s02-slide">
+                        <img src="img/sale-slide-1.jpg" alt="slide01">
+                        <div class="type">сноуборд</div>
+                        <div class="item">never summer
+                            <span class="name">raven</span>
+                        </div>
                     </div>
                 </div>
-                <div class="s02-slide">
-                    <img src="img/sale-slide-2.jpg" alt="slide02">
-                    <div class="type up">крепление</div>
-                    <div class="item up">liquid force
-                        <span class="name">rant</span>
+                <div class="slide-wrapper">
+                    <div class="s02-slide">
+                        <img src="img/sale-slide-2.jpg" alt="slide02">
+                        <div class="type up">крепление</div>
+                        <div class="item up">liquid force
+                            <span class="name">rant</span>
+                        </div>
                     </div>
                 </div>
-                <div class="s02-slide">
-                    <img src="img/sale-slide-3.jpg" alt="slide03">
-                    <div class="type right">шлем</div>
-                    <div class="item right">triple eight
-                        <span class="name">hero</span>
+                <div class="slide-wrapper">
+                    <div class="s02-slide">
+                        <img src="img/sale-slide-3.jpg" alt="slide03">
+                        <div class="type right">шлем</div>
+                        <div class="item right">triple eight
+                            <span class="name">hero</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -223,86 +236,110 @@
             <img src="img/blog-frame-2.png" alt="frame2" class="img frame major">
             <h2 class="best">Лучшие товары</h2>
             <div class="s04-slider-best">
-                <div class="s04-slide">
-                    <img src="img/best-item-1.jpg" alt="best-item">
-                    <div class="type">сноуборд</div>
-                    <div class="name">burton social</div>
-                    <div class="price">9 000грн</div>
+                <div class="s04-slide-wrapper">
+                    <div class="s04-slide">
+                        <img src="img/best-item-1.jpg" alt="best-item">
+                        <div class="type">сноуборд</div>
+                        <div class="name">burton social</div>
+                        <div class="price">9 000грн</div>
+                    </div>
                 </div>
-                <div class="s04-slide">
-                    <img src="img/best-item-2.jpg" alt="best-item">
-                    <div class="type">сноуборд</div>
-                    <div class="name">burton trick pony</div>
-                    <div class="price">9 000грн</div>
+                <div class="s04-slide-wrapper">
+                    <div class="s04-slide">
+                        <img src="img/best-item-2.jpg" alt="best-item">
+                        <div class="type">сноуборд</div>
+                        <div class="name">burton trick pony</div>
+                        <div class="price">9 000грн</div>
+                    </div>
                 </div>
-                <div class="s04-slide">
-                    <img src="img/best-item-3.jpg" alt="best-item">
-                    <div class="type">сноуборд</div>
-                    <div class="name">burton deja vu</div>
-                    <div class="price">9 000грн</div>
+                <div class="s04-slide-wrapper">
+                    <div class="s04-slide">
+                        <img src="img/best-item-3.jpg" alt="best-item">
+                        <div class="type">сноуборд</div>
+                        <div class="name">burton deja vu</div>
+                        <div class="price">9 000грн</div>
+                    </div>
                 </div>
-                <div class="s04-slide">
-                    <img src="img/best-item-1.jpg" alt="best-item">
-                    <div class="type">сноуборд</div>
-                    <div class="name">burton social</div>
-                    <div class="price">9 000грн</div>
+                <div class="s04-slide-wrapper">
+                    <div class="s04-slide">
+                        <img src="img/best-item-1.jpg" alt="best-item">
+                        <div class="type">сноуборд</div>
+                        <div class="name">burton social</div>
+                        <div class="price">9 000грн</div>
+                    </div>
                 </div>
-                <div class="s04-slide">
-                    <img src="img/best-item-2.jpg" alt="best-item">
-                    <div class="type">сноуборд</div>
-                    <div class="name">burton trick pony</div>
-                    <div class="price">9 000грн</div>
+                <div class="s04-slide-wrapper">
+                    <div class="s04-slide">
+                        <img src="img/best-item-2.jpg" alt="best-item">
+                        <div class="type">сноуборд</div>
+                        <div class="name">burton trick pony</div>
+                        <div class="price">9 000грн</div>
+                    </div>
                 </div>
-                <div class="s04-slide">
-                    <img src="img/best-item-3.jpg" alt="best-item">
-                    <div class="type">сноуборд</div>
-                    <div class="name">burton deja vu</div>
-                    <div class="price">9 000грн</div>
+                <div class="s04-slide-wrapper">
+                    <div class="s04-slide">
+                        <img src="img/best-item-3.jpg" alt="best-item">
+                        <div class="type">сноуборд</div>
+                        <div class="name">burton deja vu</div>
+                        <div class="price">9 000грн</div>
+                    </div>
                 </div>
             </div>
             <h2 class="blog">Блог</h2>
             <div class="s04-slider-blog">
-                <div class="blog-slide">
-                    <img src="img/blog-image-1.jpg" alt="blog-image">
-                    <div class="date">12.02.17</div>
-                    <div class="title">Турнир в Сочи</div>
-                    <div class="text">В рамках фестиваля Quicksilver New Star Camp на круглогодичном горнолыжном</div>
-                    <a href="" class="btn read">читать</a>
+                <div class="blog-slide-wrapper">
+                    <div class="blog-slide">
+                        <img src="img/blog-image-1.jpg" alt="blog-image">
+                        <div class="date">12.02.17</div>
+                        <div class="title">Турнир в Сочи</div>
+                        <div class="text">В рамках фестиваля Quicksilver New Star Camp на круглогодичном горнолыжном</div>
+                        <a href="" class="btn read">читать</a>
+                    </div>
                 </div>
-                <div class="blog-slide">
-                    <img src="img/blog-image-2.jpg" alt="blog-image">
-                    <div class="date">12.02.17</div>
-                    <div class="title">Кубок Европы 2017</div>
-                    <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
-                    <a href="" class="btn read">читать</a>
+                <div class="blog-slide-wrapper">
+                    <div class="blog-slide">
+                        <img src="img/blog-image-2.jpg" alt="blog-image">
+                        <div class="date">12.02.17</div>
+                        <div class="title">Кубок Европы 2017</div>
+                        <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
+                        <a href="" class="btn read">читать</a>
+                    </div>
                 </div>
-                <div class="blog-slide">
-                    <img src="img/blog-image-3.jpg" alt="blog-image">
-                    <div class="date">12.02.17</div>
-                    <div class="title">World Tour 2017</div>
-                    <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
-                    <a href="" class="btn read">читать</a>
+                <div class="blog-slide-wrapper">
+                    <div class="blog-slide">
+                        <img src="img/blog-image-3.jpg" alt="blog-image">
+                        <div class="date">12.02.17</div>
+                        <div class="title">World Tour 2017</div>
+                        <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
+                        <a href="" class="btn read">читать</a>
+                    </div>
                 </div>
-                <div class="blog-slide">
-                    <img src="img/blog-image-1.jpg" alt="blog-image">
-                    <div class="date">12.02.17</div>
-                    <div class="title">Турнир в Сочи</div>
-                    <div class="text">В рамках фестиваля Quicksilver New Star Camp на круглогодичном горнолыжном</div>
-                    <a href="" class="btn read">читать</a>
+                <div class="blog-slide-wrapper">
+                    <div class="blog-slide">
+                        <img src="img/blog-image-1.jpg" alt="blog-image">
+                        <div class="date">12.02.17</div>
+                        <div class="title">Турнир в Сочи</div>
+                        <div class="text">В рамках фестиваля Quicksilver New Star Camp на круглогодичном горнолыжном</div>
+                        <a href="" class="btn read">читать</a>
+                    </div>
                 </div>
-                <div class="blog-slide">
-                    <img src="img/blog-image-2.jpg" alt="blog-image">
-                    <div class="date">12.02.17</div>
-                    <div class="title">Кубок Европы 2017</div>
-                    <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
-                    <a href="" class="btn read">читать</a>
+                <div class="blog-slide-wrapper">
+                    <div class="blog-slide">
+                        <img src="img/blog-image-2.jpg" alt="blog-image">
+                        <div class="date">12.02.17</div>
+                        <div class="title">Кубок Европы 2017</div>
+                        <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
+                        <a href="" class="btn read">читать</a>
+                    </div>
                 </div>
-                <div class="blog-slide">
-                    <img src="img/blog-image-3.jpg" alt="blog-image">
-                    <div class="date">12.02.17</div>
-                    <div class="title">World Tour 2017</div>
-                    <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
-                    <a href="" class="btn read">читать</a>
+                <div class="blog-slide-wrapper">
+                    <div class="blog-slide">
+                        <img src="img/blog-image-3.jpg" alt="blog-image">
+                        <div class="date">12.02.17</div>
+                        <div class="title">World Tour 2017</div>
+                        <div class="text">Есть много варинатов , но большинство из них имеет не всегда приемлемые</div>
+                        <a href="" class="btn read">читать</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -310,7 +347,9 @@
 </main>
 
 <aside>
-    <a href="javascript:void(0);" class="upBtn">вверх</a>
+    <a href="javascript:void(0);" class="upBtn">
+        <i class="fa fa-arrow-circle-up"></i>
+    </a>
     
     <div class="basket-wrapper">
         <div class="modal">
@@ -398,6 +437,7 @@
 </footer>
 
 <script src="js/bundle.js" defer></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARvdRw1SpsWliKKLKd4DAH2kkc0PxU3Ck&callback=initMap" defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARvdRw1SpsWliKKLKd4DAH2kkc0PxU3Ck&callback=initMap"
+        defer></script>
 </body>
 </html>
